Revert "fix the 'cut off `g` on the welcome screen' thing"
This reverts commit ecf377050f47e267385497da19db8a61e07b3398.

--- a/freemocap/gui/qt/style_sheet/qt_style_sheet.scss
+++ b/freemocap/gui/qt/style_sheet/qt_style_sheet.scss
@@ -158,7 +158,6 @@ WelcomeScreenButton {
     font-size: 24px;
     border-radius: 20px;
     padding: 10px;
-    min-height: auto;
 }
 
 WelcomeScreenButton:hover {
